<resources>
    <string name="app_name">Jobify</string>
    <string name="sign_in_button">Sign In</string>
    <string name="logo_jobify">TODO</string>
    <string name="logo_jobify1">TODO</string>
    <string name="welcome_to">Welcome to</string>
    <string name="text_1page">Join Jobify today and embark on a journey towards a fulfilling and successful career. Let us be your trusted partner in navigating the ever-evolving landscape of job opportunities.</string>
    <string name="dont_text_1page">Don\'t have an account?</string>
    <string name="create_new_button_1page">Create New</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image_btn_back" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>