<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bgphoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bgphoto"
        android:contentDescription="@string/logo_jobify" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/welcome_to"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="122dp"
            android:layout_height="60dp"
            android:layout_marginTop="-10dp"
            android:contentDescription="@string/logo_jobify1"
            app:srcCompat="@drawable/logo_jobify_light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/oxygen"
            android:text="@string/text_1page"
            android:textColor="#FFFFFF"
            android:textSize="14.2sp" />

        <Button
            android:id="@+id/button_signin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#092486"
            android:fontFamily="@font/oxygen"
            android:text="@string/sign_in_button"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/dont_text_1page"
                android:textAlignment="viewStart"
                android:textColor="#FDFDFD" />

            <Button
                android:id="@+id/button_create_acc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:fontFamily="@font/oxygen_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/create_new_button_1page"
                android:textColor="#8FA7FD"
                app:iconPadding="0dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>